# HW_Django_Authentication

./: data.json  pyproject.toml  readme.md
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py  0003_alter_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_category.py  0003_productversion.py  0004_remove_productversion_sign_of_version_and_more.py  0006_alter_product_options_product_is_publication.py
catalog/templates/catalog/: base.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_profile.py  0006_user_email_verification_token_user_email_verified.py
users/templates/users/: email_verified.html  login.html  register.html  user_form.html
